objects/Bulletin_Accounts__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bulletin_Accounts_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bulletin Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bulletin_Delivery_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulletin Number</label>
        <referenceTo>Bulletin_Delivery_Job__c</referenceTo>
        <relationshipLabel>Bulletin Accounts</relationshipLabel>
        <relationshipName>Bulletin_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <description>Store criteria by which we choose contacts. This is the same criteria that we are listing in the email to Account Owner.</description>
        <label>Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Generic_Attachment_ID__c</fullName>
        <formula>SUBSTITUTE(Generic_Attachment__c,  (LEFT(Generic_Attachment__c,FIND(&apos;?file=&apos;,Generic_Attachment__c)) + &apos;file=&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Attachment ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Attachment__c</fullName>
        <label>Generic Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>PIB Sensitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIB Non-Sensitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Bulletin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PIB_Number__c</fullName>
        <formula>Bulletin_Delivery_Job__r.PIB_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PIB Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Account_ID__c</fullName>
        <formula>Account__r.SAP_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not meet criteria</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>